apps/transmission/trans-endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: trans-svc
  namespace: balhau-dev
subsets:
  - addresses:
      - ip: 192.168.1.169
    ports:
      - port: 9091
