apps/transmission/trans-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: trans-svc
  namespace: balhau-dev
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9091
